# simdrive

./: .coverage  .gitignore  CHANGELOG.md  HANDOFF.md  MANIFEST.in  Makefile  README.md  RELEASES.md  SECURITY.md  llms.txt  pyproject.toml  server.json  setup.py  simdrive_cloud.db
.claude/: mcp.json
.specterqa/: v16-handoff.md
.well-known/: agent.json
LapsApp/: README.md  project.yml
TestKitApp/: Info.plist  build.sh
docs/: MCP_TOOL_SURFACE.md  accuracy-review-INIT-2026-525.md  copy-review-INIT-2026-525.md  landing-page.md  security-scan-INIT-2026-525.md  troubleshooting.md
examples/: 01-smoke-test.yaml  02-form-with-waits.yaml  03-conditional-branching.yaml  04-visual-regression.yaml
runner/: __init__.py  build.sh  launch.sh
scripts/: generate_llms_txt.py  smoke_journey_cycle1.py
simdrive/: .gitignore  CHANGELOG.md  LICENSE  MIGRATION.md  NOTICE  README.md  pyproject.toml  setup.py  simdrive_cloud.db
simdrive/.hypothesis/constants/: 043d863f84e06096  075a4b5b4ee059d7  079b840e02ef5d14  109f607f44d61338  10c17a0af179e228  12aa14e099ddb4d1  13f1ae2012612e40  14a6af3593242d6b  167948095805dd43  16ff52bd8d9a2863  1dc607b436d40921  2119d2c527806756  21a49b19608ec52b  2dd2dab9d5a51fb6  37f4bacbefc32971  38a9e1032e5b467c  3eaa4ebb789e065e  47e278142c9b12b4  4a8f9aa36e5b7ee8  53305e968b1d0aef  54c34bb108d033f4  54e3be75cdd4f73a  565b5ecf9a7d17ca  5b37d8fedd61eda4  5b3aa53029f37559  5c948aa90bf66ca5  5d20f7f5263cbc0f  5f75b35de93f8f47  643df37c90f8ceec  68192632ea959a39  6bd49704c253148b  732558cb17a5ade8  78e393eb2b0faa48  79faeb571a5310f8  7c542dca691cb9dd  7ee024ee7c0768e1  809323a591ca6992  8157963a9e0574ec  86bd9091f6ecc8a6  8aa7cdd6a53cc03a  (+41 more)
simdrive/cloud_deploy/: .env.example  Procfile  README.md  railway.toml
simdrive/docs/: BEST_PRACTICES.md  COVERAGE_RATCHET.md  D6_LOGS_INVESTIGATION.md  DOGFOOD_FEEDBACK_2026_05_05_SPLASHMATE.md  DOGFOOD_FEEDBACK_2026_05_06_MOES_MAX.md  FEATURE_REQUEST_STATE_CONTRACT_2026_05_11.md  HERO_DEMO_SCRIPT.md  IP_STRATEGY.md  LIMITATIONS.md  MIGRATION.md  OBSERVABILITY.md  PERFORMANCE.md  PRODUCTIZATION_PLAN.md  REAL_DEVICE_FEASIBILITY.md  RECOVERY.md  REDACTION_SPEC.md  RELEASE_CHECKLIST.md
simdrive/docs/RD_SIMDRIVE_1.0/: 00_SIMDRIVE_1.0_PLAN.md  00a_VALIDATED_FACTS.md  01_product_engineering.md  02_brand_marketing.md  03_gtm_pricing.md  04_competitive_risk.md  05_engineering_expansion.md  06_world_class_moat_features.md  07_test_app_spec.md  08_BUILD_KICKOFF.md
simdrive/docs/brand/: README.md
simdrive/docs/gtm/: community_charter.md  dev_advocate_targets.md  launch_sequence.md  onboarding_emails.md  outreach_templates.md  press_kit.md  pricing_page.md
simdrive/docs/marketing/: README_v2.md  case_study_palace.md  pypi_long_description.md  show_hn_post.md  synctek_product_page.md  twitter_launch_thread.md  why_we_built_specterqa.md
simdrive/native/: Makefile
simdrive/native/src/: Indigo.h  simdrive_input.m
simdrive/src/simdrive/: __init__.py  _demo.py  _wait.py  act.py  ax.py  device.py  diagnostics.py  errors.py  hid_inject.py  observe.py  perf.py  pid_input.py  recorder.py  robustness.py  server.py  session.py  sim.py  som.py  window.py
simdrive/src/simdrive/_bin/: simdrive-input
simdrive/src/simdrive/cloud/: __init__.py  app.py  auth.py  config.py  errors.py  privacy.py
simdrive/src/simdrive/cloud/db/: __init__.py  models.py  usage.py
simdrive/src/simdrive/cloud/middleware/: quotas.py
simdrive/src/simdrive/cloud/routes/: licenses.py  recordings.py  runs.py  trials.py
simdrive/src/simdrive/cloud/storage/: r2.py  r2_stub.py
simdrive/src/simdrive/journey/: __init__.py  ci.py  claude_client.py  criteria.py  errors.py  loader.py  mcp_sampling_client.py  persona.py  prompt.py  result.py  runner.py  schema.py
simdrive/src/simdrive/license/: __init__.py  cli.py  entitlement.py  errors.py  gate.py  keypair.py  public_key.py  signer.py  telemetry.py  trial.py  trial_history.py  validator.py
simdrive/src/simdrive/observability/: __init__.py  logger.py  metrics.py  tracing.py
simdrive/src/simdrive/wda/: PINNED_SHA.txt  __init__.py  bootstrap.py  client.py  errors.py  registry.py  som_device.py
simdrive/src/specterqa_ios/: act.py  diagnostics.py  errors.py  recorder.py  server.py  som.py
simdrive/src/specterqa_ios/cloud/: app.py  auth.py  config.py
simdrive/src/specterqa_ios/cloud/db/: models.py
simdrive/src/specterqa_ios/cloud/routes/: licenses.py  recordings.py  trials.py
simdrive/src/specterqa_ios/cloud/storage/: __init__.py
simdrive/src/specterqa_ios/journey/: ci.py  errors.py  runner.py  schema.py
simdrive/src/specterqa_ios/license/: cli.py  entitlement.py  errors.py  keypair.py  public_key.py  trial.py  validator.py
simdrive/tests/: conftest.py  test_a11_bootstrap_smoke.py  test_a11_device_input.py  test_a11_device_logs.py  test_a11_device_som.py  test_a11_version_dynamic.py  test_a12_apps_build.py  test_a12_auto_recover.py  test_a12_devicectl_noise_filter.py  test_a12_dismiss_sheet_device.py  test_a12_http_debug.py  test_a12_log_filter_kinds.py  test_a12_marks_parity.py  test_a12_polish.py  test_a12_schema_targets.py  test_a12_session_replace.py  test_a12_typetext_device.py  test_a13_device_recording.py  test_a13_device_replay.py  test_a13_schema_markers.py  test_a13_state_contract.py  test_a14_wda_tunnel_host.py  test_act_module.py  test_auto_team_detect.py  test_ax_module.py  test_b11_mcp_server_mode_no_restart.py  test_b4_dogfood_fixes.py  test_b4_palace_dogfood_fixes.py  test_b5_domain_b_recording_format.py  test_b5_domain_c_text_targeting.py  test_b5_domain_d_ssim_masking.py  test_b5_domain_e_coverage.py  test_branding_and_recovery_strings.py  test_chaos_integration.py  test_cloud_app.py  test_cloud_auth.py  test_cloud_health.py  test_cloud_local_quota.py  test_cloud_privacy.py  test_cloud_quotas.py  (+74 more)
simdrive/tests/fixtures/journey_cycle1_smoke/: journey.yaml  persona.yaml
simdrive/tests/perf/: README.md  __init__.py  bench_baselines.json  bench_journey_throughput.py  bench_observe.py  bench_tap.py  conftest.py
tests/: conftest.py  test_adversarial.py  test_async_session.py  (+72 more)
(+378 files in other folders)
