[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "specterqa-ios"
version = "4.2.0"
description = "SpecterQA iOS Simulator Driver — AI-driven iOS testing via Claude Computer Use"
readme = "README.md"
license = "Elastic-2.0"
requires-python = ">=3.10"
authors = [
    {name = "SyncTek LLC", email = "info@synctek.io"},
]

dependencies = [
    "Pillow>=10.0",
    "numpy>=1.24",
    "anthropic>=0.39.0",
    "click>=8.0",
    "rich>=13.0",
    "pyyaml>=6.0",
    "pyobjc-framework-Quartz>=10.0",
]

[project.optional-dependencies]
native = [
    "pyobjc-framework-Quartz>=10.0",
]
mcp = [
    "mcp>=1.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "ruff>=0.1.0",
]

[project.scripts]
specterqa-ios = "specterqa.ios.cli.commands:main"
specterqa-ios-mcp = "specterqa.ios.mcp.server:serve"

[project.entry-points."specterqa.drivers"]
ios_simulator = "specterqa.ios.sim_driver:SimDriver"

[project.entry-points."specterqa.cli_extensions"]
ios = "specterqa.ios.cli:ios_command_group"

[tool.setuptools.packages.find]
where = ["src"]
include = ["specterqa*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "integration: real-device integration tests (require a booted iOS Simulator)",
]

[tool.ruff]
line-length = 120
target-version = "py310"
