[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "specterqa-ios"
version = "11.5.0"
description = "SpecterQA iOS Simulator Driver — AI-driven iOS testing via Claude Computer Use"
readme = "README.md"
license = "Elastic-2.0"
requires-python = ">=3.10"
authors = [
    {name = "SyncTek LLC", email = "info@synctek.io"},
]
keywords = ["ios", "testing", "qa", "xctest", "simulator", "mcp", "ai", "agent"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: MacOS",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "Pillow>=10.0",
    "click>=8.0",
    "rich>=13.0",
    "pyyaml>=6.0",
    "requests>=2.31",
    "pyobjc-framework-Quartz>=10.0",
    "pyobjc-framework-Cocoa>=10.0",
]

[project.urls]
Homepage = "https://synctek.io/specterqa"
Repository = "https://github.com/SyncTek-LLC/specterqa-ios"
Issues = "https://github.com/SyncTek-LLC/specterqa-ios/issues"
Changelog = "https://github.com/SyncTek-LLC/specterqa-ios/blob/main/CHANGELOG.md"

[project.optional-dependencies]
native = [
    "pyobjc-framework-Quartz>=10.0",
    "pyobjc-framework-Cocoa>=10.0",
]
mcp = [
    "mcp>=1.0",
]
orchestration = [
    "anthropic>=0.39.0",
    "numpy>=1.24",
]
license = [
    "httpx>=0.27.0",
    "pyyaml>=6.0",
    "stripe>=8.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "ruff>=0.1.0",
    "httpx>=0.27.0",
    "specterqa-ios[orchestration]",
]

[project.scripts]
specterqa-ios = "specterqa.ios.cli.commands:main"
specterqa-ios-mcp = "specterqa.ios.mcp.server:serve"

[project.entry-points."specterqa.drivers"]
ios_simulator = "specterqa.ios.sim_driver:SimDriver"

[project.entry-points."specterqa.cli_extensions"]
ios = "specterqa.ios.cli:ios_command_group"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["specterqa*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "integration: real-device integration tests (require a booted iOS Simulator)",
]

[tool.ruff]
line-length = 120
target-version = "py310"
